Bug 368131 - KolourPaint 16.08.0 ignores relative paths on the command line
Summary: KolourPaint 16.08.0 ignores relative paths on the command line
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-02 05:24 UTC by David Korth
Modified: 2016-09-02 07:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Korth 2016-09-02 05:24:16 UTC
KolourPaint 16.08.0 ignores relative paths on the command line. This seems to be caused by QUrl::fromUserInput not handling relative pathnames.

Reproducible: Always

Steps to Reproduce:
1. In a terminal, cd to a directory containing an image file.
2. kolourpaint ./imagefile.png

Actual Results:  
KolourPaint opens a blank, untitled image.

Expected Results:  
KolourPaint opens imagefile.png.
Comment 1 Christoph Feck 2016-09-02 07:48:34 UTC
Git commit bff9e7aeff53e9de6ad87aa24d6b9f128a506eb6 by Christoph Feck.
Committed on 02/09/2016 at 07:49.
Pushed by cfeck into branch 'Applications/16.08'.

Handle local files as arguments

M  +2    -1    kolourpaint.cpp

http://commits.kde.org/kolourpaint/bff9e7aeff53e9de6ad87aa24d6b9f128a506eb6
Comment 2 Martin Koller 2016-09-02 07:55:37 UTC
Git commit 81d38d69c6c73473a4867defbff79e54b08334ad by Martin Koller.
Committed on 02/09/2016 at 07:55.
Pushed by mkoller into branch 'Applications/16.08'.

Fix handling of commandline filename argument when given relative path

When a relative path was given as argument, an invalid QUrl was used,
leading to not opening the file. Fixed that.
Also when a non-existing filename was given, we now detect the mime-type
by the filename extension so that saving this file will correctly do so.
FIXED-IN: 16.08.1

M  +15   -6    document/kpDocument_Open.cpp
M  +1    -1    kolourpaint.cpp

http://commits.kde.org/kolourpaint/81d38d69c6c73473a4867defbff79e54b08334ad
Comment 3 Martin Koller 2016-09-02 07:56:23 UTC
Git commit 333e1d16efe138d3618f5ec4ecfd6008c7b6a848 by Martin Koller.
Committed on 02/09/2016 at 07:51.
Pushed by mkoller into branch 'master'.

Fix handling of commandline filename argument when given relative path

When a relative path was given as argument, an invalid QUrl was used,
leading to not opening the file. Fixed that.
Also when a non-existing filename was given, we now detect the mime-type
by the filename extension so that saving this file will correctly do so.
FIXED-IN: 16.08.1

M  +15   -6    document/kpDocument_Open.cpp
M  +3    -2    kolourpaint.cpp

http://commits.kde.org/kolourpaint/333e1d16efe138d3618f5ec4ecfd6008c7b6a848