Handle local files as arguments

BUG: 368131